--- a/packages/mhta-visual-components/package.json
+++ b/packages/mhta-visual-components/package.json
@@ -2,25 +2,41 @@
   "name": "mhta-visual-components",
   "version": "0.2.0",
   "private": true,
-  "description": "> TODO: description",
-  "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com>",
-  "license": "UNLICENSED",
-  "main": "lib/mhta-visual-components.js",
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "tsc": "tsc -b",
-    "build": "npm run tslint && npm run tsc",
-    "prepublish": "npm run build"
+    "serve": "vue-cli-service serve",
+    "lint": "vue-cli-service lint",
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:unit": "vue-cli-service test:unit",
+    "build-vue-lib": "vue-cli-service build --target lib --name mhta-visual-components src/main.ts",
+    "prepublish": "npm run lint && npm run build-vue-lib"
   },
   "dependencies": {
-    "ow": "^0.8.0"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jblew/medical-history-taking-app.git"
+  "devDependencies": {
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^5.2.4",
+    "@vue/cli-plugin-e2e-cypress": "^3.2.0",
+    "@vue/cli-plugin-typescript": "^3.2.0",
+    "@vue/cli-plugin-unit-mocha": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "chai": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "typescript": "^3.0.0",
+    "vue-template-compiler": "^2.5.17"
   },
-  "bugs": {
-    "url": "https://github.com/Jblew/medical-history-taking-app/issues"
-  }
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
