--- a/packages/mhta-frontend/package.json
+++ b/packages/mhta-frontend/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "mhta-frontend",
-  "version": "0.2.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit",
-    "prepublish": "npm run lint && npm run build"
-  },
-  "dependencies": {
-    "mhta-applets-visual": "^0.2.0",
-    "mhta-medicalstructure": "^0.2.0",
-    "mhta-model": "^0.2.0",
-    "mhta-visual-components": "^0.2.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
-    "@vue/cli-plugin-e2e-cypress": "^3.2.0",
-    "@vue/cli-plugin-typescript": "^3.2.0",
-    "@vue/cli-plugin-unit-mocha": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "name": "mhta-frontend",
+    "version": "0.2.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "test:e2e": "vue-cli-service test:e2e",
+        "test:unit": "vue-cli-service test:unit",
+        "prepublish": "npm run lint && npm run build"
+    },
+    "dependencies": {
+        "material-design-icons-iconfont": "^4.0.3",
+        "mhta-applets-visual": "^0.2.0",
+        "mhta-medicalstructure": "^0.2.0",
+        "mhta-model": "^0.2.0",
+        "mhta-visual-components": "^0.2.0",
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuetify": "^1.3.15",
+        "vuex": "^3.0.1",
+        "webfontloader": "^1.6.28",
+        "mhta-i18n": "^0.2.0"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.1.0",
+        "@types/mocha": "^5.2.4",
+        "@types/webfontloader": "^1.6.29",
+        "@vue/cli-plugin-e2e-cypress": "^3.2.0",
+        "@vue/cli-plugin-typescript": "^3.2.0",
+        "@vue/cli-plugin-unit-mocha": "^3.2.0",
+        "@vue/cli-service": "^3.2.0",
+        "@vue/test-utils": "^1.0.0-beta.20",
+        "chai": "^4.1.2",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^7.0.1",
+        "typescript": "^3.0.0",
+        "vue-template-compiler": "^2.5.17"
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
 }
