--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "medical-history-taking-app",
-  "private": true,
-  "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/mocha": "^5.2.5",
-    "@types/nock": "^9.3.0",
-    "@types/node": "^10.12.18",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "istanbul": "^0.4.5",
-    "lerna": "^3.8.0",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.5",
-    "node-sass": "^4.11.0",
-    "nyc": "^13.1.0",
-    "sass-loader": "^7.1.0",
-    "ts-loader": "^5.3.2",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "uglifyjs-webpack-plugin": "^2.1.0",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.28.2",
-    "webpack-visualizer-plugin": "^0.1.11"
-  }
+    "name": "medical-history-taking-app",
+    "private": true,
+    "scripts": {
+        "lerna-bootstrap": "lerna bootstrap",
+        "create-public": "rm -rf public && ln -s packages/mhta-frontend/dist public",
+        "build": "npm run lerna-bootstrap && npm run create-public",
+        "firebase-deploy": "firebase deploy",
+        "deploy": "npm run build && npm run firebase-deploy"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.1.7",
+        "@types/chai-as-promised": "^7.1.0",
+        "@types/mocha": "^5.2.5",
+        "@types/nock": "^9.3.0",
+        "@types/node": "^10.12.18",
+        "chai": "^4.2.0",
+        "chai-as-promised": "^7.1.1",
+        "firebase-tools": "^6.2.2",
+        "istanbul": "^0.4.5",
+        "lerna": "^3.8.0",
+        "mocha": "^5.2.0",
+        "nock": "^10.0.5",
+        "node-sass": "^4.11.0",
+        "nyc": "^13.1.0",
+        "sass-loader": "^7.1.0",
+        "ts-loader": "^5.3.2",
+        "ts-node": "^7.0.1",
+        "tslint": "^5.12.0",
+        "typescript": "^3.2.2",
+        "uglifyjs-webpack-plugin": "^2.1.0",
+        "vue-loader": "^15.4.2",
+        "vue-template-compiler": "^2.5.21",
+        "webpack": "^4.28.2",
+        "webpack-visualizer-plugin": "^0.1.11"
+    }
 }
