--- a/packages/mhta-frontend/package.json
+++ b/packages/mhta-frontend/package.json
@@ -11,21 +11,28 @@
         "prepublish": "npm run lint && npm run build"
     },
     "dependencies": {
+        "firebase": "^5.7.2",
+        "firebaseui": "^3.5.1",
+        "inversify": "^5.0.1",
         "material-design-icons-iconfont": "^4.0.3",
         "mhta-applets-visual": "^0.2.0",
+        "mhta-i18n": "^0.2.0",
         "mhta-medicalstructure": "^0.2.0",
         "mhta-model": "^0.2.0",
         "mhta-visual-components": "^0.2.0",
+        "ow": "^0.8.0",
+        "reflect-metadata": "^0.1.12",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
         "vuetify": "^1.3.15",
         "vuex": "^3.0.1",
-        "webfontloader": "^1.6.28",
-        "mhta-i18n": "^0.2.0"
+        "webfontloader": "^1.6.28"
     },
     "devDependencies": {
         "@types/chai": "^4.1.0",
+        "@types/firebase": "^3.2.1",
         "@types/mocha": "^5.2.4",
+        "@types/node": "^10.12.18",
         "@types/webfontloader": "^1.6.29",
         "@vue/cli-plugin-e2e-cypress": "^3.2.0",
         "@vue/cli-plugin-typescript": "^3.2.0",
