--- a/packages/mhta-i18n/package.json
+++ b/packages/mhta-i18n/package.json
@@ -13,5 +13,8 @@
         "build": "rm -rf lib && npm run tslint && npm run tsc",
         "prepublish": "npm run build"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "tslint": "^5.12.0",
+        "typescript": "^3.2.2"
+    }
 }
