--- a/packages/mhta-medicalstructure/package.json
+++ b/packages/mhta-medicalstructure/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "mhta-medicalstructure",
-  "version": "0.2.0",
-  "private": true,
-  "description": "> TODO: description",
-  "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com>",
-  "homepage": "https://github.com/Jblew/medical-history-taking-app#readme",
-  "license": "UNLICENSED",
-  "main": "lib/mhta-medicalstructure.js",
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "tsc": "tsc -b",
-    "build": "npm run tslint && npm run tsc",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "mhta-model": "^0.2.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jblew/medical-history-taking-app.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Jblew/medical-history-taking-app/issues"
-  }
+    "name": "mhta-medicalstructure",
+    "version": "0.2.0",
+    "private": true,
+    "description": "> TODO: description",
+    "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com>",
+    "homepage": "https://github.com/Jblew/medical-history-taking-app#readme",
+    "license": "UNLICENSED",
+    "main": "lib/mhta-medicalstructure.js",
+    "scripts": {
+        "test": "echo \"Error: run tests from root\" && exit 1",
+        "tslint": "tslint -c tslint.json -p tsconfig.json",
+        "tsc": "tsc -b",
+        "build": "npm run tslint && npm run tsc",
+        "prepublish": "npm run build"
+    },
+    "dependencies": {
+        "mhta-model": "^0.2.0"
+    },
+    "devDependencies": {
+        "tslint": "^5.12.0",
+        "typescript": "^3.2.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Jblew/medical-history-taking-app.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Jblew/medical-history-taking-app/issues"
+    }
 }
