--- a/packages/mhta-model/package.json
+++ b/packages/mhta-model/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "mhta-model",
-  "version": "0.2.0",
-  "private": true,
-  "description": "> TODO: description",
-  "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com>",
-  "license": "UNLICENSED",
-  "main": "lib/mhta-model.js",
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "tsc": "tsc -b",
-    "build": "npm run tslint && npm run tsc",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "ow": "^0.8.0",
-    "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "@types/uuid": "^3.4.4"
-  }
+    "name": "mhta-model",
+    "version": "0.2.0",
+    "private": true,
+    "description": "> TODO: description",
+    "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com>",
+    "license": "UNLICENSED",
+    "main": "lib/mhta-model.js",
+    "scripts": {
+        "test": "echo \"Error: run tests from root\" && exit 1",
+        "tslint": "tslint -c tslint.json -p tsconfig.json",
+        "tsc": "tsc -b",
+        "build": "npm run tslint && npm run tsc",
+        "prepublish": "npm run build"
+    },
+    "dependencies": {
+        "ow": "^0.8.0",
+        "uuid": "^3.3.2"
+    },
+    "devDependencies": {
+        "@types/uuid": "^3.4.4",
+        "tslint": "^5.12.0",
+        "typescript": "^3.2.2"
+    }
 }
